--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,25 +1,23 @@
 @font-face {
-  font-family: "Lato";
-  src: url("assets/fonts/Lato-Black.ttf");
+  font-family: "RobotoSlab";
+  src: url("../assets/fonts/RobotoSlab-Black.ttf");
   font-weight: 800;
 }
+
 @font-face {
-  font-family: "Lato";
-  src: url("assets/fonts/Lato-Bold.ttf");
+  font-family: "RobotoSlab";
+  src: url("../assets/fonts/RobotoSlab-Bold.ttf");
   font-weight: 700;
 }
+
 @font-face {
-  font-family: "Lato";
-  src: url("assets/fonts/Lato-Regular.ttf");
-  font-weight: 400;
+  font-family: "RobotoSlab";
+  src: url("../assets/fonts/RobotoSlab-Medium.ttf");
+  font-weight: 500;
 }
+
 @font-face {
-  font-family: "Source Sans Pro";
-  src: url("assets/fonts/SourceSansPro-Regular.ttf");
+  font-family: "RobotoSlab";
+  src: url("../assets/fonts/RobotoSlab-Regular.ttf");
   font-weight: 400;
-}
-@font-face {
-  font-family: "Source Sans Pro";
-  src: url("assets/fonts/SourceSansPro-Light.ttf");
-  font-weight: 300;
 }
