--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,61 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family: "RobotoSlab", sans-serif;
+  font-size: 15px;
+  background: url(../assets/img/bg.jpg) 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style-type: none;
+}
+
+.container {
+  width: 800px;
+  margin: 0 auto;
+  height: 100%;
+}
+
+.header__nav {
+  background-color: rgba(127, 67, 224, 0.541);
+  width: 100%;
+  margin: 0 auto;
+}
+
+.header__menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 50px;
+  padding: 0 30px;
+}
+
+.header__menu-item {
+  border-right: 5px dotted #ffffff;
+  padding: 0 39px 0 0;
+}
+
+.header__menu-item:last-child {
+  border-right: none;
+}
+
+.header__menu-link {
+  text-decoration: none;
+  font-weight: 800;
+  color: black;
+}
+
+.header__menu-link:hover {
+  color: aliceblue;
+  text-decoration: underline;
+  transition: all 1.3s;
+  text-shadow: 1px 1px 2px rgb(24, 6, 9);
 }
