--- a/css/style.css
+++ b/css/style.css
@@ -338,3 +338,43 @@ li {
 .examples__header {
   padding-left: 5px;
 }
+
+.wrapper__footer {
+  margin-top: 30px;
+  width: 490px;
+  height: 240px;
+  background: #ffffff;
+  border: 1px solid #000000;
+  box-shadow: 15px 15px 0px #e24a0e;
+  border-radius: 12px;
+  margin-right: 40px;
+}
+
+.examples__works {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.examples__works-img {
+  width: 150px;
+  height: 120px;
+  border: 2px solid #000000;
+  box-shadow: 3px 3px red, -1em 0 0.4em olive;
+}
+
+.examples__works-link {
+  color: #ffffff;
+}
+
+.examples__works-descr {
+  font-weight: 700;
+  text-align: center;
+}
+
+.round {
+  content: "";
+  background-color: rgb(201, 51, 25);
+  border-radius: 50%;
+}
